Implement Keystone Platform with Drupal-inspired plugin system and Address Validator
This major release introduces the complete Keystone extensible application platform,
featuring a sophisticated plugin architecture inspired by Drupal's modular design.

## Platform Core Features

### Plugin System Architecture
- Manifest-based plugin discovery and self-description (`manifest.json` spec)
- Dynamic plugin loading and hot-swapping without downtime
- Full lifecycle management (install, enable, disable, uninstall)
- Event-driven communication between plugins via EventBus
- RBAC permission integration with `resource:action` format
- Database migrations and configuration management per plugin
- Frontend and backend plugin extension points

### Core Services Implementation
- **PluginSystem**: Complete plugin discovery, validation, and lifecycle management
- **AuthenticationService**: JWT auth with refresh tokens and RBAC permissions
- **DatabaseService**: PostgreSQL with connection pooling and PostGIS support
- **EmailService**: Brevo integration for transactional emails with webhooks
- **EventBusService**: Decoupled event-driven plugin communication
- **ExternalAPIService**: Unified external API integration framework

### Infrastructure & DevOps
- Production-ready Docker Compose configurations (full and minimal stacks)
- Nginx reverse proxy with SSL termination and rate limiting
- Separate production (kevinalthaus.com) and testing (pw.kevinalthaus.com) domains
- Complete monitoring stack: Prometheus, Grafana, Loki, Promtail
- Automated database backups and health checks
- Redis caching layer for performance optimization

## Address Validator Plugin

First production plugin demonstrating the platform's capabilities:

### Features
- Multi-provider geocoding (Google Maps, Here, Mapbox) with fallback support
- Address validation, standardization, and geocoding to coordinates
- Batch processing for up to 100 addresses simultaneously
- Intelligent caching with configurable TTL
-

--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "dev": "turbo run dev",
     "build": "turbo run build",
     "test": "turbo run test",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "test:e2e:install": "playwright install",
     "lint": "turbo run lint",
     "format": "turbo run format",
     "clean": "turbo run clean",
@@ -20,7 +25,8 @@
     "@types/node": "^20.0.0",
     "typescript": "^5.0.0",
     "prettier": "^3.0.0",
-    "eslint": "^8.0.0"
+    "eslint": "^8.0.0",
+    "@playwright/test": "^1.40.0"
   },
   "packageManager": "npm@10.0.0",
   "engines": {
