--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,24 +18,43 @@
     "clean": "rm -rf dist coverage"
   },
   "dependencies": {
-    "express": "^4.18.0",
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
     "dotenv": "^16.0.0",
-    "winston": "^3.8.0",
-    "joi": "^17.9.0"
+    "eventemitter3": "^5.0.0",
+    "express": "^4.18.0",
+    "express-rate-limit": "^6.7.0",
+    "express-validator": "^7.0.0",
+    "helmet": "^7.0.0",
+    "ioredis": "^5.3.0",
+    "joi": "^17.9.0",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "node-pg-migrate": "^6.2.0",
+    "pg": "^8.11.0",
+    "prom-client": "^14.2.0",
+    "redis": "^4.6.0",
+    "uuid": "^9.0.0",
+    "winston": "^3.8.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
+    "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.13",
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "ts-node": "^10.9.0",
-    "nodemon": "^3.0.0",
-    "jest": "^29.5.0",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^20.0.0",
+    "@types/supertest": "^2.0.12",
+    "@types/uuid": "^10.0.0",
+    "jest": "^29.5.0",
+    "nodemon": "^3.0.0",
     "supertest": "^6.3.0",
-    "@types/supertest": "^2.0.12"
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.0",
+    "typescript": "^5.0.0"
   }
 }
